# yolo_dect

./: .gitignore  Database_Helper.py  back.py  buildings.db  place_Helper.py  pyproject.toml  run_decet.py  yolo.py
config/: settings.json
