[tool.poetry]
name = "school-yolo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ultralytics = "^8.2.0"
flask = "^3.1.1"
flask-cors = "^6.0.0"
folium = "^0.19.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
